<resources>
    <string name="app_name">Do your thing</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_username">Create a username</string>
    <string name="create_a_password">Create a password</string>
    <string name="enter_your_email_id">Enter your email id</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account_create_account">Don\'t have an account? Create account</string>
    <string name="log_in">Log In</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="favorites">Favorites</string>
    <string name="about">About</string>
    <string name="username">Username</string>
    <string name="describe_your_thoughts">Describe your thoughts...</string>
</resources>