<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ProfileActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_profile_pic"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:layout_gravity="center"
        app:cardPreventCornerOverlap="false"
        android:layout_width="220dp"
        android:layout_height="220dp">
    <ImageView
        android:id="@+id/img_profile_pic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/profile_pic_place_holder" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:weightSum="5"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_style"
            android:hint="@string/username"
            android:gravity="center"
            android:padding="16dp"
            android:layout_weight="4"
            android:inputType="textCapWords" />

        <ImageButton
            android:id="@+id/imgbtn_edit_username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:src="@drawable/ic_baseline_edit_24"
            android:background="@color/secondaryColor"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_about"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_style"
            android:hint="@string/about"
            android:gravity="center"
            android:padding="16dp"
            android:layout_weight="4"
            android:inputType="textCapWords" />

        <ImageButton
            android:id="@+id/imgbtn_edit_about"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_edit_24"
            android:background="@color/secondaryColor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_favorites"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_style"
            android:hint="@string/favorites"
            android:gravity="center"
            android:padding="16dp"
            android:layout_weight="4"
            android:inputType="textMultiLine|textCapSentences" />

        <ImageButton
            android:id="@+id/imgbtn_edit_favorites"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_edit_24"
            android:background="@color/secondaryColor" />
    </LinearLayout>
</LinearLayout>
</ScrollView>